--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/notifications": "^8.3.2",
     "@prisma/client": "^6.16.2",
     "dayjs": "^1.11.18",
+    "firebase": "^10.14.0",
     "next": "^16.0.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
